--- a/PLC Test/PLC Test.csproj
+++ b/PLC Test/PLC Test.csproj
@@ -94,6 +94,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Function.cs" />
+    <Compile Include="SQL.cs" />
+    <Compile Include="UDPtoFSU.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
