--- a/PLC Test/PLC Test.csproj
+++ b/PLC Test/PLC Test.csproj
@@ -83,11 +83,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Form.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Form.Designer.cs">
+      <DependentUpon>Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SQLLog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SQLLog.Designer.cs">
+      <DependentUpon>SQLLog.cs</DependentUpon>
     </Compile>
     <Compile Include="ModbusClient.cs" />
     <Compile Include="Model.cs" />
@@ -95,8 +101,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Function.cs" />
     <Compile Include="SQL.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Form.resx">
+      <DependentUpon>Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SQLLog.resx">
+      <DependentUpon>SQLLog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
