--- a/PLC Test/App.config
+++ b/PLC Test/App.config
@@ -12,6 +12,7 @@
     <add key="DefaultTest" value="C:\Users\lenovo\source\repos\PLC Test\PLC Test\bin\Debug\测试流程\test.xlsx"></add>
     <add key="DefaultDatabase" value="Server=LEESINCOOL\SQLEXPRESS;Database=TestResult;user id=sa;pwd=111111"></add>
     <add key="PDUHead" value="true"></add>
+    <add key="IsFirstTime" value="true"></add>
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
